--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
     "name": "SmolNudge",
-    "slug": "heybuddy",
+    "slug": "smolnudge",
     "scheme": "smolnudge",
+    "sdkVersion": "53.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "sdkVersion": "50.0.0",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
