--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heybuddy-premium",
+  "name": "smolnudge",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,25 +10,25 @@
     "postinstall": "node eas/hooks/post-install.js"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "6.5.11",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/stack": "^6.3.20",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "expo": "~50.0.0",
-    "expo-blur": "~12.4.1",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "@expo/vector-icons": "^13.0.0"
-  },
+  "expo": "~53.0.0",
+  "react": "18.2.0",
+  "react-native": "0.73.7",
+  "@expo/vector-icons": "^14.1.0",
+  "@react-native-async-storage/async-storage": "1.19.1",
+  "@react-navigation/bottom-tabs": "6.5.21",
+  "@react-navigation/native": "6.1.16",
+  "@react-navigation/stack": "6.3.22",
+  "expo-blur": "~14.4.0",
+  "expo-linear-gradient": "~12.7.0",
+  "expo-status-bar": "~1.10.1",
+  "react-native-gesture-handler": "~2.15.0",
+  "react-native-reanimated": "~3.8.0",
+  "react-native-safe-area-context": "4.10.0",
+  "react-native-screens": "~3.29.0"
+},
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   }
 }
