--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "postinstall": "node eas/hooks/post-install.js"
   },
   "dependencies": {
-  "expo": "~53.0.0",
-  "react": "18.2.0",
-  "react-native": "0.72.4",
-  "@expo/vector-icons": "^14.1.0",
-  "@react-native-async-storage/async-storage": "1.19.1",
-  "@react-navigation/bottom-tabs": "6.5.10",
-  "@react-navigation/native": "6.1.16",
-  "@react-navigation/stack": "6.3.22",
-  "expo-blur": "~12.7.0",
-  "expo-linear-gradient": "~12.7.0",
-  "expo-status-bar": "~1.11.0",
-  "react-native-gesture-handler": "~2.15.0",
-  "react-native-reanimated": "~3.8.0",
-  "react-native-safe-area-context": "4.10.0",
-  "react-native-screens": "~3.29.0"
-},
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "1.19.1",
+    "@react-navigation/bottom-tabs": "6.5.10",
+    "@react-navigation/native": "6.1.16",
+    "@react-navigation/stack": "6.3.22",
+    "expo": "~53.0.0",
+    "expo-blur": "~12.7.0",
+    "expo-linear-gradient": "~12.7.0",
+    "expo-status-bar": "~1.11.0",
+    "metro": "^0.81.0",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.15.0",
+    "react-native-reanimated": "~3.8.0",
+    "react-native-safe-area-context": "4.10.0",
+    "react-native-screens": "~3.29.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.10",
