--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.19.1",
-    "@react-navigation/bottom-tabs": "6.5.10",
-    "@react-navigation/native": "6.1.16",
-    "@react-navigation/stack": "6.3.22",
-    "expo": "~53.0.0",
-    "expo-blur": "~12.7.0",
-    "expo-linear-gradient": "~12.7.0",
-    "expo-status-bar": "~1.11.0",
-    "metro": "^0.81.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.11",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "~53.0.10",
+    "expo-blur": "~14.0.1",
+    "expo-linear-gradient": "~12.4.0",
+    "expo-status-bar": "~1.9.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.15.0",
-    "react-native-reanimated": "~3.8.0",
-    "react-native-safe-area-context": "4.10.0",
-    "react-native-screens": "~3.29.0"
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-safe-area-context": "4.6.1",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~18.2.14",
+    "typescript": "~5.2.2"
   }
 }
